Opened 2 years ago

Closed 2 years ago

#17958 closed bug (fixed)

DriveSetup and checkfs /boot - bad work

Reported by: kim1963 Owned by: nobody
Priority: normal Milestone: R1/beta4
Component: Kits/Storage Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by kim1963)

https://discuss.haiku-os.org/t/drivesetup-and-checkfs-boot-bad-work/12517

DiskDeviceJobQueue::Execute(): executing job: N8BPrivate12SetStringJobE

DiskDeviceJobQueue::Execute(): executing job failed: Operation not supported

Attachments (8)

photo_2022-09-27_14-30-42.jpg (231.7 KB ) - added by kim1963 2 years ago.
screenshot423.png (153.5 KB ) - added by kim1963 2 years ago.
screenshot428.png (95.7 KB ) - added by kim1963 2 years ago.
screenshot438.png (95.8 KB ) - added by kim1963 2 years ago.
screenshot441.png (80.5 KB ) - added by kim1963 2 years ago.
syslog56460.txt (234.0 KB ) - added by kim1963 2 years ago.
syslog56480.txt (331.7 KB ) - added by kim1963 2 years ago.
screenshot445.png (50.0 KB ) - added by kim1963 2 years ago.

Download all attachments as: .zip

Change History (19)

comment:1 by nephele, 2 years ago

This is not helpfull at all, please include information about what the issue is, how you reproduce it, what your haiku revision is etc.

by kim1963, 2 years ago

by kim1963, 2 years ago

Attachment: screenshot423.png added

by kim1963, 2 years ago

Attachment: screenshot428.png added

comment:2 by kim1963, 2 years ago

The bug is reproduced on any night build 64 bits after updating packages - see the screenshot423.

Last edited 2 years ago by kim1963 (previous) (diff)

comment:3 by nephele, 2 years ago

again: please include information about what the issue is, how you reproduce it, what your haiku revision is etc.

I have no idea what your screenshots are supposed to show

in reply to:  3 comment:4 by kim1963, 2 years ago

Replying to nephele:

again: please include information about what the issue is, how you reproduce it, what your haiku revision is etc.

I have no idea what your screenshots are supposed to show

hrev 56465 and 56475 and 56480 -

Welcome to the Haiku shell.

~> uname -a Haiku shredderNEW 1 hrev56480 Sep 27 2022 06:06:40 x86_64 x86_64 Haiku

~> checkfs /boot

88500 nodes checked, 0 blocks not allocated, 0 blocks already set, 0 blocks could be freed

files 79831 directories 6305 attributes 1320 attr. dirs 1000 indices 44

direct block runs 105942 (77.77 ГБ) indirect block runs 19039 (in 770 array blocks, 36.94 ГБ) double indirect block runs 9952 (in 15 array blocks, 38.88 МБ)

DiskDeviceJobQueue::Execute(): executing job: N8BPrivate12SetStringJobE

DiskDeviceJobQueue::Execute(): executing job failed: Operation not supported

~>

Last edited 2 years ago by kim1963 (previous) (diff)

by kim1963, 2 years ago

Attachment: screenshot438.png added

comment:5 by kim1963, 2 years ago

Description: modified (diff)

comment:6 by korli, 2 years ago

Component: - GeneralKits/Storage Kit

Probably a consequence of https://cgit.haiku-os.org/haiku/commit/?id=e3d5904751dc8285b14e25ed815aeb6637f8d944

Could you please provide a syslog with the kernel file systems scan?

by kim1963, 2 years ago

Attachment: screenshot441.png added

in reply to:  6 comment:7 by kim1963, 2 years ago

Replying to korli:

Probably a consequence of https://cgit.haiku-os.org/haiku/commit/?id=e3d5904751dc8285b14e25ed815aeb6637f8d944

Could you please provide a syslog with the kernel file systems scan?

hrev56460 work fine

by kim1963, 2 years ago

Attachment: syslog56460.txt added

by kim1963, 2 years ago

Attachment: syslog56480.txt added

comment:8 by korli, 2 years ago

Thanks. It looks like the intel map has no name, and this is a BPartition too. Checking BPartition::ContainsFileSystem() might be an idea.

742	KERN: device 0: /dev/disk/nvme/0/raw
743	KERN:   media status:      No error
744	KERN:   device flags:      2
745	KERN:   offset:            0
746	KERN:   size:              250059350016 (238475.179 MB)
747	KERN:   content size:      250059350016
748	KERN:   block size:        512
749	KERN:   physical block size: 512
750	KERN:   child count:       1
751	KERN:   index:             -1
752	KERN:   status:            0
753	KERN:   flags:             5
754	KERN:   volume:            -1
755	KERN:   disk system:       partitioning_systems/intel/map/v1
756	KERN:   name:              <NULL>
757	KERN:   content name:      <NULL>
758	KERN:   type:              <NULL>
759	KERN:   content type:      Intel Partition Map
760	KERN:   params:            <NULL>
761	KERN:   content params:    <NULL>
762	KERN:   partition 1: /dev/disk/nvme/0/0
763	KERN:     offset:            32768
764	KERN:     size:              250059161600 (238475 MB)
765	KERN:     content size:      250059161600
766	KERN:     block size:        2048
767	KERN:     physical block size: 512
768	KERN:     child count:       0
769	KERN:     index:             0
770	KERN:     status:            0
771	KERN:     flags:             2
772	KERN:     volume:            -1
773	KERN:     disk system:       file_systems/bfs/v1
774	KERN:     name:              <NULL>
775	KERN:     content name:      HaikuNVME
776	KERN:     type:              Be File System
777	KERN:     content type:      Be File System
778	KERN:     params:            type = 235 ; active = 1
779	KERN:     content params:    <NULL>
780	KERN: Identified boot partition by partition offset.

by kim1963, 2 years ago

Attachment: screenshot445.png added

comment:10 by WildKeccak, 2 years ago

If we have no partitions and try to create one, what happens?

Can we format partitions?

Do we have a spare thumb drive for testing?

comment:11 by waddlesplash, 2 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: newclosed

Fixed in hrev56500.

Note: See TracTickets for help on using tickets.