src/add-ons/disk_systems/fat/InitializeParameterEditor.cpp
@@ -55,7 +55,7 @@ InitializeFATEditor::SetTo(BPartition* partition)
 {
 	BString name = partition->Name();
 	if (name.IsEmpty())
-		name = partition->ContentName();
+		name = partition->RawContentName();
 	if (!name.IsEmpty())
 		fNameControl->SetText(name.String());
 }
