src/add-ons/disk_systems/ntfs/InitializeParameterEditor.cpp
@@ -50,7 +50,7 @@ InitializeNTFSEditor::SetTo(BPartition* partition)
 {
 	BString name = partition->Name();
 	if (name.IsEmpty())
-		name = partition->ContentName();
+		name = partition->RawContentName();
 	if (!name.IsEmpty())
 		fNameControl->SetText(name.String());
 }
